# salifortmotors

./: Activity_ Course 7 Salifort Motors project lab (1).ipynb  JUNIOR_ANALYST_QUICKSTART.md  Makefile  README.md  Salifort Motors_ Executive Summary for EDA and Model Building.txt  Salifort Motors_ PACE Strategy Document.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: salifort_feature_names.pkl  salifort_y_pred.pkl  salifort_y_pred_prob.pkl  xgb_salifort_model.pkl
notebooks/: Activity_ Course 7 Salifort Motors project lab (1).ipynb  Activity_ Course 7 Salifort Motors project lab-csv notes.ipynb
reports/: Salifort Employee Attrition Project Visuals .twbx
src/project1/: __init__.py  dataset.py  features.py  plots.py
src/project1/modeling/: predict.py  train.py
