[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src/project1"
version = "0.0.1"
description = "First Structured Portfolio Project Using Python and VS Code (CookieCutter Structure)"
authors = [
  { name = "Will Escalante" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["src/project1"]
include = ["pyproject.toml", "src/project1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src/project1"]
force-sort-within-sections = true

